Well, that's one way to solve text overflow...

--- a/src/src/SeerUK/DWright/GalleryBundle/Resources/public/css/style.css
+++ b/src/src/SeerUK/DWright/GalleryBundle/Resources/public/css/style.css
@@ -40,7 +40,7 @@
 			}
 
 			.galleries > li > div > .overlay {
-				background-color: rgba(52, 52, 52, .8);
+				background-color: #343434;
 				bottom: 0;
 				display: block;
 				left: 0;
@@ -49,10 +49,10 @@
 				position: absolute;
 				right: 0;
 				top: 0;
-				-webkit-transition: opacity .07s ease-in;
-				-moz-transition: opacity .07s ease-in;
-				-o-transition: opacity .07s ease-in;
-				transition: opacity .07s ease-in;
+				-webkit-transition: opacity .1s ease-in;
+				-moz-transition: opacity .1s ease-in;
+				-o-transition: opacity .1s ease-in;
+				transition: opacity .1s ease-in;
 				z-index: 3;
 			}
 
@@ -92,12 +92,25 @@
 
 				.galleries > li > div > .overlay > .desc {
 					bottom: 80px;
+					display: block;
 					left: 8%;
 					overflow: hidden;
 					position: absolute;
 					right: 8%;
 					top: 129px;
+					word-wrap: break-word;
 				}
+
+					.galleries > li > div > .overlay > .desc:after {
+						bottom: 0;
+						box-shadow: inset 0 -44px 30px -20px #343434;
+						content: " ";
+						display: block;
+						height: 40px;
+						left: 0;
+						position: absolute;
+						right: 0;
+					}
 
 				.galleries > li > div > .overlay > .posted {
 					bottom: 8%;
